Jpamodelgen: Init test case project.